--- a/src/appsco-manage-integration-page.html
+++ b/src/appsco-manage-integration-page.html
@@ -108,6 +108,10 @@
                     right: 0;
                     bottom: 3px;
                 };
+                --item-info-label: {
+                    font-size: 14px;
+                    white-space: unset !important;
+                };
                 --item-info-value: {
                     white-space: unset !important;
                 };
