--- a/src/provisioning/appsco-active-integration-item.html
+++ b/src/provisioning/appsco-active-integration-item.html
@@ -22,6 +22,9 @@
                 width: 52px;
                 height: 52px;
             }
+            :host .requires-authorization {
+                color: red;
+            }
         </style>
 
         <div class="item" on-tap="_onItemAction">
@@ -66,6 +69,13 @@
                         </template>
                         <template is="dom-if" if="[[ !item.active ]]">
                             inactive
+                        </template>
+                    </span>
+                </div>
+                <div class="info">
+                    <span class="info-value">
+                        <template is="dom-if" if="[[ item.requires_authorization ]]">
+                            <span class="requires-authorization">Requires reauthorization</span>
                         </template>
                     </span>
                 </div>
